# Loans

./: .env.example  .gitignore  .replit  CLEANUP_BEFORE_GIT.md  CODE_REVIEW_FINAL.md  CONFIGURATION.md  DEPLOYMENT_FLOW_VISUAL.md  DEPLOYMENT_READY.md  FINAL_DEPLOYMENT_CHECKLIST.md  GITHUB_PUSH_GUIDE.md  GIT_AND_RENDER_SETUP.md  GUIDE.md  PAYSTACK_SETUP.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QUICK_REFERENCE.md  README.md  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_CHECKLIST.md  RENDER_FREE_TIER_SETUP.md  REVIEW_COMPLETE.txt  SETUP.md  db.py  health_snippet.py  init_db.py  main.py  paystack.py  postman_collection.json  prod_app.py  pyproject.toml  replit.md  requirements.txt  supabase_connection.py
attached_assets/: Loans_Prompt_1765447773862.txt  Pasted-ROLE-Act-as-a-deterministic-code-generator-Follow-every_1765447910015.txt
backend/: README.md  render_start.sh  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: main.py
backend/app/models/: loan.py  transaction.py  user.py
backend/app/routers/: auth.py  loan.py  payments.py
backend/app/schemas/: loan.py  payment.py  user.py
backend/app/services/: paystack_service.py
backend/app/utils/: auth.py  database.py
frontend/: dashboard.html  index.html  loan_apply.html  login.html  payment.html
frontend/scripts/: api.js  ui.js
frontend/styles/: animations.css  glass.css  main.css
infra/: config.py  render.yaml
